profile picture, formatting

--- a/components/Education.module.scss
+++ b/components/Education.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     padding-top: 50px;
     padding-bottom: 50px;
-    background: #c0392b url('/images/bg-edu.jpg');
+    background: #c0392b;
     background-size: cover;
     color: #333333;
     font-size: 1.3em;
