--- a/components/HeaderTitle.module.scss
+++ b/components/HeaderTitle.module.scss
@@ -1,14 +1,21 @@
 .title {
     font-size: 8em;
     font-weight: bold;
-
-    span {
-        color: #c0392b;
-    }
 }
+
+.name {
+    color: #c42b1a;
+}
+
 
 @media screen and ( max-height: 690px ) {
     .title {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) { /* Adjust the max-width as needed */
+    .title .im {
         display: none;
     }
 }
