--- a/components/About.module.scss
+++ b/components/About.module.scss
@@ -1,33 +1,33 @@
 .wrapper {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    background: #34495e;
-    color: #ffffff;
-    font-size: 1.3em;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background: #34495e;
+  color: #ffffff;
+  font-size: 1.3em;
+  overflow-x: hidden;
 
-    dl > dt {
-        color: #ffcc00;
-        font-weight: bold;
-    }
+  dl > dt {
+    color: #ffcc00;
+    font-weight: bold;
+  }
 
-    dl > dd {
-        margin-bottom: 30px;
-    }
+  dl > dd {
+    margin-bottom: 30px;
+  }
 }
 
-
 .mascot {
-    margin-left: 20px;
-    width: 180px;
+  margin-left: 20px;
+  width: 180px;
 }
 
 .detail {
-    font-size: 0.95em;
+  font-size: 0.95em;
 
-    b {
-        color: #F1A9A0;
-    }
-    i {
-        color: #00E640;
-    }
+  b {
+    color: #f1a9a0;
+  }
+  i {
+    color: #00e640;
+  }
 }
