--- a/components/AboutInterest.module.scss
+++ b/components/AboutInterest.module.scss
@@ -1,12 +1,12 @@
 .topic {
-    font-weight: bold;
-    color: #ffcc00;
-    font-size: 1.2em;
+  font-weight: bold;
+  color: #ffcc00;
+  font-size: 1.2em;
 }
 .item .img {
-    margin: 0 30px;
-    transition: all .2s ease-in-out;
+  margin: 0 30px;
+  transition: all 0.2s ease-in-out;
 }
 .item .img:hover {
-    transform: scale(1.5); 
+  transform: scale(1.5);
 }
