--- a/components/ExperiencesTimelineItem.module.scss
+++ b/components/ExperiencesTimelineItem.module.scss
@@ -62,10 +62,12 @@ $lineColor: #7f8c8d;
   right: 14px;
 }
 @media screen and (max-width: 769px) {
-  .timeline .left {
+  .timeline .detail-left {
     border-right: 0px;
+    border-top: 8px solid;
   }
-  .timeline .right {
+  .timeline .detail-right {
     border-left: 0px;
+    border-top: 8px solid;
   }
 }
