--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --color-about: #222844;
+  --color-experience: #353e5a;
+  --color-extra: #4b404f;
+  --color-education: #6d3b47;
+  --color-skills: #262c40;
+}
