--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,59 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-:root {
+@custom-variant dark (&:is(.dark *));
+
+@theme {
   --color-about: #222844;
   --color-experience: #353e5a;
   --color-extra: #4b404f;
   --color-education: #6d3b47;
   --color-skills: #262c40;
+
+  --animate-flip: flip 1s ease-in-out;
+  --animate-move: move 1s;
+  --animate-move-r: move-r 1s;
+
+  --text-15em: 15em;
+
+  --inset-1\/2-minus-10px: calc(50% - 10px);
+
+  --translate-2px: 2px;
+
+  --border-width-10: 10px;
+  --border-width-20: 20px;
+
+  --shadow-edu: 10px 10px 0px #333333;
+
+  --scale-130: 1.3;
+  --scale-140: 1.4;
+
+  --rotate-360: 360deg;
+  --rotate-720: 720deg;
+
+  --margin-2px: 2px;
+
+  @keyframes flip {
+    0% {
+      transform: rotateY(360deg) scale(0);
+    }
+    100% {
+      transform: rotateY(0deg) scale(1);
+    }
+  }
+  @keyframes move {
+    0% {
+      transform: translate(-200px, 0px);
+    }
+    100% {
+      transform: translate(0px, 0px);
+    }
+  }
+  @keyframes move-r {
+    0% {
+      transform: translate(200px, 0px);
+    }
+    100% {
+      transform: translate(0px, 0);
+    }
+  }
 }
